# uploader

./: CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: Publish.yaml  PublishDockerDevImage.yaml  QA.yaml  Tests.yaml
src/kiwix_uploader/: __init__.py  __main__.py  api.py  context.py  entrypoint.py  s3.py  scp.py  sftp.py  upload.py  utils.py
tests/: test_utils.py
